# stockburn

./: Cargo.toml  small_AMD.csv
examples/: fakegen.rs  load_scale.rs  stockburn_a.rs
src/: lib.rs  util.rs
src/data/: fake.rs  mod.rs
src/data/polygon/: mod.rs
src/data/scale/: mod.rs
src/lstm/: mod.rs
tests/: polygon_io.rs
