[package]
name = "stockburn"
version = "0.1.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "^0.1.7"
serde = { version = "^1.0", features = ["derive"] }
num = "^0.3"
chrono = { version = "^0.4", features = ["serde"] }
rand = "^0.7"
rand_distr = "^0.2"
itertools = "^0.9"

[dev-dependencies]
rustyline = "^6.2"

[[example]]
name = "fakegen"