[package]
name = "stockburn"
version = "0.1.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = { git = "https://github.com/LaurentMazare/tch-rs" }
serde = { version = "^1.0", features = ["derive"] }
num = "^0.3"
chrono = { version = "^0.4", features = ["serde"] }
rand = "^0.7"
rand_distr = "^0.2"
itertools = "^0.9"
csv = "^1.1"
ta = "^0.1"

[dev-dependencies]
rustyline = "^6.2"
clap = "^2.33"
tempfile = "^3.1"
io-enum = "^0.2"

[[example]]
name = "fakegen"